# full-stack-fastapi-postgresql

{{cookiecutter.project_slug}}/backend/: backend.dockerfile
{{cookiecutter.project_slug}}/backend/app/: alembic.ini  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py  script.py.mako
{{cookiecutter.project_slug}}/backend/app/alembic/versions/: 2022-05-02_07:46:12_d4867f3a4c0a_first_revision.py  d4867f3a4c0a_first_revision.py
{{cookiecutter.project_slug}}/backend/app/app/: cli.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py
{{cookiecutter.project_slug}}/backend/app/app/db/: base_class.py  init_db.py  time.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/models/: __init__.py  item.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/schemas/: role.py  user.py
