[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.scripts]
boscapp = "app.cli:app"


[tool.poetry.dependencies]
python = "^3.9"
inboard = {version = "^0.26.0", extras = ["fastapi"]}
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
emails = "^0.5.15"
raven = "^6.10.0"
jinja2 = "^3.0.0"
alembic = "^1.4.2"
sqlalchemy = {extras = ["postgresql_psycopg2binary"], version = "~1.4.0"}
pytest = "^7.1.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
Faker = "^13.3.4"
SQLAlchemy-Utils = "^0.38.2"
numpy = "^1.22.3"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^22.3.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.1.2"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
sqlacodegen = "^2.3.0"
ipython = "^8.3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "app/tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 120
target-version = ['py37', 'py38', 'py39']
